Add defaults scss

--- a/web/themes/padel365/src/scss/variables/default.scss
+++ b/web/themes/padel365/src/scss/variables/default.scss
@@ -12,3 +12,19 @@ $font-color: color.$charcoal;
 $font-family: 'Source Sans Pro', sans-serif;
 $font-size: 16px;
 $font-weight: 400;
+
+// Sizes
+$size-1: 3px;
+$size-2: 5px;
+$size-3: 10px;
+$size-4: 20px;
+$size-5: 30px;
+$size-6: 40px;
+$size-7: 60px;
+$size-8: 80px;
+$size-9: 100px;
+$size-10: 150px;
+
+// Center width
+$center-width: 1440px;
+$center-small-width: 920px;
