--- a/web/themes/padel365/templates/layout/region--header.html.twig
+++ b/web/themes/padel365/templates/layout/region--header.html.twig
@@ -16,6 +16,10 @@
 #}
 {% if content %}
   <header role="banner"{{ attributes.addClass('site-header') }}>
-    {{ content }}
+    <div class="center">
+      <div class="header-wrapper">
+        {{ content }}
+      </div>
+    </div>
   </header>
 {% endif %}
