--- a/web/themes/padel365/src/scss/main.scss
+++ b/web/themes/padel365/src/scss/main.scss
@@ -12,6 +12,7 @@
 @use './general/general';
 @use './general/legible';
 @use './general/layout';
+@use './general/responsive';
 
 // Optional styling
 //
