--- a/web/themes/padel365/src/scss/variables/color.scss
+++ b/web/themes/padel365/src/scss/variables/color.scss
@@ -2,4 +2,10 @@
 
 $black: #000;
 $white: #fff;
-$charcoal: #475168;
+$midnight-black: #262626;
+$green-light: #2ED973;
+$green-dark: #308F3F;
+
+// I like
+// #313F48
+// #2A3237
