Add webfonts to project

--- a/web/themes/padel365/src/scss/main.scss
+++ b/web/themes/padel365/src/scss/main.scss
@@ -10,6 +10,7 @@
 // styling that does not really fit in to any of the other sections.
 
 @use './general/general';
+@use './general/webfonts';
 @use './general/legible';
 @use './general/layout';
 @use './general/responsive';
