--- a/web/themes/padel365/src/scss/variables/color.scss
+++ b/web/themes/padel365/src/scss/variables/color.scss
@@ -2,10 +2,9 @@
 
 $black: #000;
 $white: #fff;
+$whiteish: #fafafa;
 $midnight-black: #262626;
-$green-light: #2ED973;
-$green-dark: #308F3F;
-
-// I like
-// #313F48
-// #2A3237
+$green-logo-light: #2ED973;
+$green-logo-dark: #308F3F;
+$unnamed-one: #313F48;
+$unnamed-two: #2A3237;
