--- a/web/themes/padel365/src/scss/general/general.scss
+++ b/web/themes/padel365/src/scss/general/general.scss
@@ -8,6 +8,7 @@ body {
   font-family: default.$font-family;
   font-size: default.$font-size;
   font-weight: default.$font-weight;
+  line-height: 1.4;
 }
 
 body {
@@ -17,7 +18,7 @@ body {
 
 a,
 a:visited {
-  text-decoration: none;
+  text-decoration: underline;
 }
 
 a:active,
