--- a/web/themes/padel365/src/scss/general/layout.scss
+++ b/web/themes/padel365/src/scss/general/layout.scss
@@ -7,3 +7,14 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+.center-small {
+  width: default.$center-small-width;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.sections section {
+  padding-top: default.$size-6;
+  padding-bottom: default.$size-6;
+}
