--- a/web/themes/padel365/src/scss/general/legible.scss
+++ b/web/themes/padel365/src/scss/general/legible.scss
@@ -4,4 +4,64 @@
 // similar. This should not be used outside of running text with e.g.
 // components but only as a stand alone styling for running text.
 
-// .legible {}
+@use '../variables/default';
+@use '../variables/color';
+
+.legible {
+  line-height: 1.4;
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,
+  p,
+  ul,
+  ol,
+  blockquote,
+  pre,
+  table,
+  figure,
+  hr {
+    margin-top: 1em;
+  }
+
+  *:first-child {
+    margin-top: 0;
+  }
+
+  h1 + *,
+  h3 + *,
+  h2 + *,
+  h4 + *,
+  h5 + *,
+  h6 + * {
+    margin-top: 0.3em;
+  }
+
+  h1,
+  .header-1 {
+    font-size: 2.75rem;
+    font-family: default.$secondary-font-family;
+    font-weight: 700;
+    line-height: 1.2;
+
+  }
+  
+  h2,
+  .header-2 {
+    font-size: 2.0rem;
+    font-family: default.$secondary-font-family;
+    font-weight: 700;
+    line-height: 1.2;
+
+  }
+  
+  h3,
+  .header-3 {
+    font-size: 1.5rem;
+    font-weight: 600;
+    line-height: 1.2;
+  }
+}
