--- a/web/themes/padel365/src/scss/main.scss
+++ b/web/themes/padel365/src/scss/main.scss
@@ -32,6 +32,7 @@
 @use './components/pagination';
 @use './components/status-message';
 @use './components/text';
+@use './components/cookie-banner';
 
 // Content styling
 
