--- a/web/themes/padel365/src/scss/general/webfonts.scss
+++ b/web/themes/padel365/src/scss/general/webfonts.scss
@@ -2,3 +2,9 @@
 // Open Sans
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Domine:wght@400..700&display=swap');
+
+// Material icons
+.material-symbols-outlined {
+  font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 48;
+}
+  
