--- a/web/themes/padel365/src/scss/general/unsorted.scss
+++ b/web/themes/padel365/src/scss/general/unsorted.scss
@@ -38,7 +38,7 @@ header {
       margin-right: default.$size-4;
 
       a {
-        color: white;
+        color: color.$midnight-black;
         text-decoration: none;
         font-size: 1rem;
         font-weight: 400;
