Install, enable and config Cheeseburger menu

--- a/web/themes/padel365/src/scss/general/unsorted.scss
+++ b/web/themes/padel365/src/scss/general/unsorted.scss
@@ -47,6 +47,22 @@ header {
   }
 }
 
+// Cheeseburger menu
+.block-cheeseburgermenu-container {
+  background-color: color.$midnight-black;
+  width: 100%;
+
+  li {
+    padding-left: 0;
+
+    a {
+      justify-content: center;
+      min-width: unset;
+      max-width: unset;
+    }
+  }
+}
+
 // EU Cookie Complience
 
 .sliding-popup-bottom {
