--- a/web/themes/padel365/src/scss/general/unsorted.scss
+++ b/web/themes/padel365/src/scss/general/unsorted.scss
@@ -46,6 +46,28 @@ header {
     li {
       margin-right: default.$size-4;
 
+      &:last-child {
+        border: 1px solid transparent;
+        border-radius: 5px;
+        display: flex;
+        height: 40px;
+        width: auto;
+        min-width: 135px;
+        justify-content: center;
+        align-items: center;
+        background-color: color.$green-logo-dark;
+        padding: 0 10px;
+
+        &:hover {
+          background-color: darken(color.$green-logo-dark, 10%);
+        }
+
+        a {
+          color: color.$whiteish;
+          background: transparent;
+        }
+      }
+
       a {
         color: color.$midnight-black;
         text-decoration: none;
@@ -54,7 +76,7 @@ header {
         padding: 0 5px;
 
         &:hover {
-          color: color.$white;
+          color: color.$whiteish;
           padding: 0 5px;
         }
       }
@@ -81,6 +103,35 @@ header {
           margin-bottom: 30px;
           padding: 0 5px;
           display: inline-block;
+        }
+
+        &:last-child {
+          border: 1px solid transparent;
+          border-radius: 5px;
+          display: flex;
+          height: 40px;
+          width: auto;
+          min-width: 135px;
+          justify-content: center;
+          align-items: center;
+          background-color: color.$green-logo-dark;
+          text-align: center;
+          padding: 0 10px;
+  
+          &:hover {
+            background-color: darken(color.$green-logo-dark, 10%);
+          }
+  
+          a {
+            color: color.$whiteish;
+            background: transparent;
+            margin: 0;
+            padding: 0;
+
+            &:hover {
+              text-decoration: none;
+            }
+          }
         }
       }
     }
@@ -116,7 +167,7 @@ header {
 
 .eu-cookie-compliance-banner {
   background-color: color.$midnight-black;
-  color: color.$white;
+  color: color.$whiteish;
 
   .eu-cookie-compliance-content {
     display: flex;
